GNOME Bugzilla – Bug 712548
Due to the animated GtkInfobars in 3.10, the height of terminal windows shrinks each time you dismiss an infobar
Last modified: 2013-12-25 21:45:07 UTC
Created attachment 260064 [details] screencast The attached screencast demonstrates the problem, where gnome-terminal gradually shrinks by the height of the infobar each time you close the infobar. To reproduce this, set gnome-terminal's preferences to "stay open when the process exits", launch some bash script file, and when it exits re-run it again by using the infobar button; the terminal will shrink on each iteration.
Does this still happen when the gtk-enable-animations gtksetting is false?
If you mean the org/gnome/desktop/interface/enable-animations key in dconf editor (if not, please tell me exactly where to find it), then yes, it still happens even if you set that to false - but the animations still happen anyway.
Filed that as gtk+ bug 712632.
Thanks, however if my understanding is correct that doesn't change the bug I'm seeing with the window height in attachment #260064 [details], right?
right
Well the question was if it's due to the animated showing/hiding, or purely the infobar itself.
Repro'd now, even when animations are off. I fixed this on master by using a GtkOverlay instead of packing the infobar into the notebook.