screen: container: Use a GtkOverlay for the info bar

https://bugzilla.gnome.org/show_bug.cgi?id=712548